src/app/coin-data/description-block/description-block.component.css
.card-header {
  background-color: inherit;
}

.module .collapse,
.module .collapsing {
  height: 3rem; /* [NUM_OF_LINES] x [LINE_HEIGHT] */
}

.module .collapse {
  position: relative; /* For ...'s content absolute positioning */
  display: block;
  overflow: hidden;
}

.module .collapse:before {
  content: ' ...';
  position: absolute;
  right: 0;
  bottom: 0;
}

.module .collapse.show {
  height: auto; /* You need to reset the height when not collapsed */
}

.module .collapse.show:before {
  display: none; /* Of course you don't want to display ... */
}

.module a.collapsed:after {
  content: '+ Show More';
}

.module a:not(.collapsed):after {
  content: '- Show Less';
}
/* Medium Devices, Desktops */
@media only screen and (min-width: 992px) {
  tr:first-child {
    border-top: hidden;
  }
}

